spacing fixes

--- a/page/sass/product.scss
+++ b/page/sass/product.scss
@@ -219,12 +219,12 @@
   }
 
   .product-r3-1 {
-    padding-top: 80px;
+    padding-top: 40px;
     padding-left: 25px;
     padding-right: 25px;
   }
   .product-r3-2 {
-    padding-top: 110px;
+    padding-top: 70px;
     padding-left: 25px;
     padding-right: 25px;
   }
@@ -237,6 +237,7 @@
     padding-right: 80px;
     @media (max-width: 767px) {
       padding-right: 0;
+      transform: translateY(-40px);
     }
   }
   .img-r3 {
@@ -332,6 +333,9 @@
 
     & > div > div > .col-sm-4 {
       margin-bottom: 200px;
+      @media (max-width: 767px) {
+        margin-bottom: 100px;
+      }
     }
   }
 
@@ -413,7 +417,9 @@
     max-width: 200px;
     left: 0;
     bottom: 0;
+    z-index: -1;
     img {max-width: 100%}
+    @media (max-width: 767px) {display: none;}
   }
 
 }
